--- a/multiple-components/package.json
+++ b/multiple-components/package.json
@@ -10,7 +10,8 @@
   "author": "Ronald Chen",
   "license": "ISC",
   "dependencies": {
-    "babel-polyfill": "6.26.0"
+    "babel-polyfill": "6.26.0",
+    "mainapp": "3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.46",
